[project]
name = "shared-utils"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "opentelemetry-api>=1.41.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.41.0",
  "opentelemetry-sdk>=1.41.0",
  "pyjwt>=2.8.0",
  "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_utils"]

[tool.hatch.build.targets.editable]
packages = ["src/shared_utils"]
